# Trashman

./: .gitignore  Bug list.cpp  CMakeLists.txt  Debug.cpp  Harness.sh  Makefile  WIP features.cpp  main.cpp  readme.md  test.cpp
Game/: Game.cpp  Game.h  Makefile  Pathfinding.cpp  Pathfinding.h  Structures.cpp  Structures.h  aStar.cpp  aStar.h  colors.h  debugValues.cpp  debugValues.h  object.cpp  object.h  objectHashTable.cpp  objectHashTable.h
Level/: Map.cpp  Map.h
Pins/: PinIO.cpp
rendering/: CMakeLists.txt  EBO.cpp  EBO.h  GameHandler.cpp  GameHandler.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c
rendering/sprites/: test2.csv
